[package]
name = "rocket-term"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
iced = { version = "0.10.0", features = ["advanced"]}
async-stream = "0.3.5"
time = "0.3.30"
futures = "0.3.29"
async-std = { version = "1.12.0", features = [] }